# MemTegra

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: CMakeLists.txt  tools.cmake
include/MemTegra/: MemTegra.h  Utils.h  allocator.hpp  device_memory.h  memory_ops.hpp  memory_tags.h  strong_pointer.hpp
sample/: CMakeLists.txt  main.cpp
src/: MemTegra.cpp  Utils.cpp  device_memory.cpp  device_memory.cu
tests/: CMakeLists.txt  test_device_memory.cpp  test_memtegra.cpp  test_strong_pointer.cpp
